@@ -21,15 +21,15 @@ package org.apache.accumulo.core.clientImpl;
 import static com.google.common.base.Suppliers.memoize;
 import static java.util.Objects.requireNonNull;
 
-import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 import java.util.Optional;
 import java.util.Properties;
-import java.util.function.Function;
+import java.util.function.BiFunction;
 import java.util.function.Supplier;
 
 import org.apache.accumulo.core.client.security.tokens.AuthenticationToken;
@@ -52,7 +52,7 @@ public class ClientInfoImpl implements ClientInfo {
   private final Supplier<AuthenticationToken> tokenSupplier;
   private final Supplier<Configuration> hadoopConf;
   private final Supplier<InstanceId> instanceId;
-  private final Function<String,ZooSession> zooSessionForName;
+  private final BiFunction<String,String,ZooSession> zooSessionForName;
 
   public ClientInfoImpl(Properties properties, Optional<AuthenticationToken> tokenOpt) {
     this.properties = requireNonNull(properties);
@@ -60,10 +60,11 @@ public class ClientInfoImpl implements ClientInfo {
     this.tokenSupplier = requireNonNull(tokenOpt).map(Suppliers::ofInstance)
         .orElse(memoize(() -> ClientProperty.getAuthenticationToken(properties)));
     this.hadoopConf = memoize(Configuration::new);
-    this.zooSessionForName =
-        name -> new ZooSession(name, getZooKeepers(), getZooKeepersSessionTimeOut(), null);
+    this.zooSessionForName = (name, rootPath) -> new ZooSession(name, getZooKeepers() + rootPath,
+        getZooKeepersSessionTimeOut(), null);
     this.instanceId = memoize(() -> {
-      try (var zk = getZooKeeperSupplier(getClass().getSimpleName() + ".getInstanceName()").get()) {
+      try (var zk =
+          getZooKeeperSupplier(getClass().getSimpleName() + ".getInstanceId()", "").get()) {
         return ZooUtil.getInstanceId(zk, getInstanceName());
       }
     });
@@ -80,8 +81,8 @@ public class ClientInfoImpl implements ClientInfo {
   }
 
   @Override
-  public Supplier<ZooSession> getZooKeeperSupplier(String clientName) {
-    return () -> zooSessionForName.apply(clientName);
+  public Supplier<ZooSession> getZooKeeperSupplier(String clientName, String rootPath) {
+    return () -> zooSessionForName.apply(requireNonNull(clientName), requireNonNull(rootPath));
   }
 
   @Override
@@ -101,7 +102,7 @@ public class ClientInfoImpl implements ClientInfo {
   }
 
   @Override
-  public Properties getProperties() {
+  public Properties getClientProperties() {
     Properties result = new Properties();
     properties.forEach((key, value) -> result.setProperty((String) key, (String) value));
     return result;
@@ -124,14 +125,14 @@ public class ClientInfoImpl implements ClientInfo {
   @SuppressFBWarnings(value = "PATH_TRAVERSAL_IN",
       justification = "code runs in same security context as user who provided propertiesFilePath")
   public static Properties toProperties(String propertiesFilePath) {
-    return toProperties(Paths.get(propertiesFilePath));
+    return toProperties(Path.of(propertiesFilePath));
   }
 
   @SuppressFBWarnings(value = "PATH_TRAVERSAL_IN",
       justification = "code runs in same security context as user who provided propertiesFile")
   public static Properties toProperties(Path propertiesFile) {
     Properties properties = new Properties();
-    try (InputStream is = new FileInputStream(propertiesFile.toFile())) {
+    try (InputStream is = Files.newInputStream(propertiesFile, StandardOpenOption.READ)) {
       properties.load(is);
     } catch (IOException e) {
       throw new IllegalArgumentException("Failed to load properties from " + propertiesFile, e);
